fix(content): HashMap 扩容示例补充 --add-opens 说明
JDK 9+ 模块化后反射读 HashMap.table 会抛 InaccessibleObjectException，
补上运行时参数并把输出改为实测值。